--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,3 +1,5 @@
+/build
+
 # Built application files
 *.apk
 *.aar
@@ -37,8 +39,8 @@ proguard/
 captures/
 
 # IntelliJ
-*.iml
 .idea/
+*.iml
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
@@ -84,4 +86,3 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
-/.idea/compiler.xml
