--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,12 @@ buildscript {
     ext.kotlin_version = "1.4.10"
     ext.lifecycle_version = "2.2.0"
     ext.koin_version = "2.1.6"
+    ext.coroutine_version = "1.3.9"
+    ext.retrofit_version = "2.9.0"
+    ext.rx_kotlin_version = "3.0.1"
+    ext.moshi_version = "1.10.0"
+    ext.logging_interceptor = "3.14.6"
+    ext.coroutine_adapter = "0.9.2"
     repositories {
         google()
         jcenter()
@@ -20,6 +26,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 }
 
