--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     ext.moshi_version = "1.10.0"
     ext.logging_interceptor = "3.14.6"
     ext.coroutine_adapter = "0.9.2"
+    ext.core_ktx_version = "1.3.2"
     repositories {
         google()
         jcenter()
