--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,13 @@ buildscript {
     ext.logging_interceptor = "3.14.6"
     ext.coroutine_adapter = "0.9.2"
     ext.core_ktx_version = "1.3.2"
+    ext.nav_version_ktx = "2.3.0"
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.0-rc03"
+        classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
