--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,7 @@ dependencies {
 
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version_ktx"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version_ktx"
+
+    testImplementation "org.mockito:mockito-inline:$mockito_inline_version"
+
 }
