--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     ext.coroutine_adapter = "0.9.2"
     ext.core_ktx_version = "1.3.2"
     ext.nav_version_ktx = "2.3.0"
+    ext.mockito_inline_version = "2.13.0"
     repositories {
         google()
         jcenter()
