--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.20"
+    ext.kotlin_version = "1.5.30"
     ext.lifecycle_version = "2.3.1"
-    ext.koin_version = "2.1.6"
+    ext.koin_version = "3.1.2"
     ext.coroutine_version = "1.3.9"
     ext.retrofit_version = "2.9.0"
     ext.moshi_version = "1.10.0"
@@ -13,10 +13,10 @@ buildscript {
     ext.mockito_inline_version = "3.8.0"
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:7.0.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -27,7 +27,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url 'https://jitpack.io' }
     }
 }
